--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://kit.fontawesome.com/1e90efc44f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Incrementing Counter</title>
 </head>
+
 <body>
     <div class="container">
         <div class="counter">
-            <div class="logo"></div>
+            <div class="logo"><i class="fa-brands fa-twitter"></i></div>
             <div class="count"></div>
             <div class="label"></div>
         </div>
 
         <div class="counter">
-            <div class="logo"></div>
+            <div class="logo"><i class="fa-brands fa-youtube"></i></div>
             <div class="count"></div>
             <div class="label"></div>
         </div>
 
         <div class="counter">
-            <div class="logo"></div>
+            <div class="logo"><i class="fa-brands fa-facebook"></i></div>
             <div class="count"></div>
             <div class="label"></div>
         </div>
     </div>
 </body>
 <script src="index.js"></script>
+
 </html>
