--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
 </head>
 
 <body>
+    <div class="">
     <div class="container">
         <div class="counter">
-            <div class="logo"><i class="fa-brands fa-twitter"></i></div>
-            <div class="count"></div>
-            <div class="label"></div>
+            <div class="logo twitter"><i class="fa-brands fa-twitter"></i></div>
+            <div class="count">0</div>
+            <div class="label">Twitter Followers</div>
         </div>
 
         <div class="counter">
-            <div class="logo"><i class="fa-brands fa-youtube"></i></div>
-            <div class="count"></div>
-            <div class="label"></div>
+            <div class="logo youtube"><i class="fa-brands fa-youtube"></i></div>
+            <div class="count">0</div>
+            <div class="label">Youtube Subscribers</div>
         </div>
 
         <div class="counter">
-            <div class="logo"><i class="fa-brands fa-facebook"></i></div>
-            <div class="count"></div>
-            <div class="label"></div>
+            <div class="logo facebook"><i class="fa-brands fa-facebook"></i></div>
+            <div class="count">0</div>
+            <div class="label">Facebook Fans</div>
         </div>
     </div>
+</div>
 </body>
 <script src="index.js"></script>
 
