timer added to increment coun values.

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 
 <body>
     <div class="">
-    <div class="container">
-        <div class="counter">
-            <div class="logo twitter"><i class="fa-brands fa-twitter"></i></div>
-            <div class="count">0</div>
-            <div class="label">Twitter Followers</div>
-        </div>
+        <div class="container">
+            <div class="counter">
+                <div class="logo twitter"><i class="fa-brands fa-twitter"></i></div>
+                <div id="twitter" class="count" data-target="12000">0</div>
+                <div class="label">Twitter Followers</div>
+            </div>
 
-        <div class="counter">
-            <div class="logo youtube"><i class="fa-brands fa-youtube"></i></div>
-            <div class="count">0</div>
-            <div class="label">Youtube Subscribers</div>
-        </div>
+            <div class="counter">
+                <div class="logo youtube"><i class="fa-brands fa-youtube"></i></div>
+                <div id="youtube" class="count" data-target="5000">0</div>
+                <div class="label">Youtube Subscribers</div>
+            </div>
 
-        <div class="counter">
-            <div class="logo facebook"><i class="fa-brands fa-facebook"></i></div>
-            <div class="count">0</div>
-            <div class="label">Facebook Fans</div>
+            <div class="counter">
+                <div class="logo facebook"><i class="fa-brands fa-facebook"></i></div>
+                <div id="facebook" class="count" data-target="7500">0</div>
+                <div class="label">Facebook Fans</div>
+            </div>
         </div>
     </div>
-</div>
 </body>
 <script src="index.js"></script>
 
